Initialize m_konsolePartMissingMessage

Otherwise it just crashes when trying to open the terminal panel

BUG: 392660
Differential Revision: https://phabricator.kde.org/D11904